13-Microservices-Distributed-Tracing-using-AWS-XRay-on-EKS/kube-manifests/03-Node-Analysis-Example/01-node-analysis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xray-node-analysis-demo
  namespace: default
  labels:
    app: xray-node-analysis-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: xray-node-analysis-demo
  template:
    metadata:
      labels:
        app: xray-node-analysis-demo
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: xray-node-analysis-demo
                topologyKey: kubernetes.io/hostname
      containers:
        - name: node-analysis-demo
          image: 086015456585.dkr.ecr.ap-northeast-2.amazonaws.com/xray-node-analysis-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
