13-Microservices-Distributed-Tracing-using-AWS-XRay-on-EKS/kube-manifests/03-Node-Analysis-Example/02-node-analysis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: xray-node-analysis-service
  namespace: default
  labels:
    app: xray-node-analysis-demo
spec:
  type: ClusterIP
  selector:
    app: xray-node-analysis-demo
  ports:
    - name: http
      port: 8080
      targetPort: 8080
