13-Microservices-Distributed-Tracing-using-AWS-XRay-on-EKS/kube-manifests/03-Node-Analysis-Example/03-node-analysis-alb-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xray-node-analysis-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: xray-node-analysis-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xray-node-analysis-service
                port:
                  number: 8080
